// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth selectors TokenSelector returns token 1`] = `"entry"`;

exports[`auth selectors selectAuth returns auth state 1`] = `
Object {
  "error": HttpErrorResponse {
    "error": "ARGH",
    "headers": HttpHeaders {
      "headers": Map {},
      "lazyUpdate": null,
      "normalizedNames": Map {},
    },
    "message": "Http failure response for (unknown url): undefined undefined",
    "name": "HttpErrorResponse",
    "ok": false,
    "status": 0,
    "statusText": "Unknown Error",
    "url": null,
  },
  "loading": false,
  "token": Object {
    "accessToken": "entry",
  },
}
`;

exports[`auth selectors selectAuthenticated returns if user is authenticated 1`] = `true`;

exports[`auth selectors selectError returns error 1`] = `
HttpErrorResponse {
  "error": "ARGH",
  "headers": HttpHeaders {
    "headers": Map {},
    "lazyUpdate": null,
    "normalizedNames": Map {},
  },
  "message": "Http failure response for (unknown url): undefined undefined",
  "name": "HttpErrorResponse",
  "ok": false,
  "status": 0,
  "statusText": "Unknown Error",
  "url": null,
}
`;

exports[`auth selectors selectLoading returns loading 1`] = `false`;

exports[`auth selectors selectToken returns token 1`] = `"entry"`;
